*** netmeta, version 6.6-6, 6666-06-06 ***

 ** Major changes **

  * League tables can be exported as CSV or Excel file

 ** User-visible changes **

  * netleague():
    - function does not print league table, but only generates it
      (necessary for export of league table)
    - new arguments 'bracket' and 'separator' to define layout of
      confidence intervals (see R function cilayout() from R package
      meta)

  * new function print.netleague() to print league table


*** netmeta, version 0.9-6, 2017-08-09 ***

 ** Major changes **

  * Prediction intervals can be calculated for treatment estimates
    from a network meta-analysis

  * In netmeta(), Q statistics for heterogeneity and design
    inconsistency are calculated according to Krahn et al. (2013);
    see help page of decomp.design()

  * In printouts and forest plots, the reference treatment can be
    considered as treatment of interest or comparator (default),
    i.e., either comparisons of reference vs other treatments or
    other treatments vs reference are reported

  * Tests for heterogeneity and design inconsistency are shown in
    printouts

  * A biplot can be generated to show partial ordering of treatment
    rankings for more than two outcomes

  * Additional checks implemented for multi-arm studies:
    - negative or zero treatment arm variances
    - duplicate treatment comparisons or incomplete sets of
      treatment comparisons within a study

 ** User-visible changes **

  * netmeta():
    - new arguments 'prediction' and 'level.predict' to calculate
      prediction intervals
    - list elements 'Q.heterogeneity' and 'Q.inconsistency' based on
      Krahn et al. (2013)
    - new list elements 'prediction', 'lower.predict',
      'upper.predict', 'df.Q.heterogeneity',
      'pval.Q.heterogeneity','df.Q.inconsistency', and
      'pval.Q.inconsistency'
    - list element 'df' renamed to 'df.Q'
    - stop with an informative error message if (i) any treatment arm